--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:vladimirca2000@hgmail.com">vladimirca2000@hgmail.com</a>
+                        <a class="d-block" href="mailto:vladimirca2000@gmail.com">vladimirca2000@gmail.com</a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
