Alteração no sobre

--- a/index.html
+++ b/index.html
@@ -55,16 +55,25 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Analista / Desenvolvedor</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Trabalho a mais de 15 anos na área de desenvolvimento de sistema criando software para integrar sistemas existentes e complementando funcionalidades a estes sistemas.</p>
+                        <p class="text-white-50 mb-4">Sou Analista/Desenvolvedor com mais de 15 anos de carreira, tenho experiência na integração de sistemas legados e complementando funcionalidades a estes.</p>
                         <br/>
-                        <p class="text-white-50 mb-4">Tenho experiencia na integração de sistemas na área de custo e orçamento, dando apoio e executando orçamentos, acompanhamento de custo, gerando informação para tomada de decisão estratégica.</p>
+                        <p class="text-white-50 mb-4">Trabalhei na área de desenvolvimento de sistema criando software para setor de orçamento e custo durante 10 anos. Atualmente trabalho desenvolvendo aplicações para setor de logística.</p>
                         <br/>
-                        <p class="text-white-50 mb-4">Nestas integrações de sistemas, utilizei tecnologias com Asp.Net Webforms com C#  / JQuery / bootstrap, utilizando diversos bancos de dados dependendo da situação (MS Sqlserver / MySql / Oracle) criando webservices/API para integração e desenvolvimento de aplicação para adicionar, complementar ou substituir uma funcionalidade destes.</p>
+                        <p class="text-white-50 mb-4">Durante o período que atuei para área de custo, apoiei a execução de orçamentos, gerando informação para tomada de decisão estratégica da empresa, na área de logística desenvolvi e atualizei o sistema de gerenciamento dos armazéns automatizados aplicando melhorias nas aplicações e migrando processos legados.</p>
                         <br/>
-                        <p class="text-white-50 mb-4">Desenvolvi aplicações mobile que substituía a importação de dados via Excel, dando agilidade, rapidez e lançamentos de dados em tempo real, proporcionando a tomada de decisão estratégica mais rápida.</p>
+                        <p class="text-white-50 mb-4">Durante minha experiência profissional, utilizei tecnologias com Asp.Net Webforms com C# / Asp.Net MVC C# / Asp.Net Core C# / JQuery / Bootstrap / Angular / JavaScript / TypeScript, utilizando diversos bancos de dados dependendo da situação (MS Sqlserver / MySql / Oracle / Postgress), criando webservices/API e usando RabbitMQ para integração e desenvolvendo melhorias as aplicações para adicionar, complementar ou substituir funcionalidades.</p>
                         <br/>
-                        <p class="text-white-50 mb-4">Tenho me qualificado em diversas áreas do desenvolvimento, principalmente em tecnologias de Front-End, tais como frameworks javascript (Vue JS, Angular, React) onde entendia ser meu ponto fraco, além de aprofundar no DotNet como na tecnologia “core”.</p>
+                        <p class="text-white-50 mb-4">Desenvolvi aplicações mobile (Java) que substituía a importação de dados via Excel, dando agilidade, rapidez e lançamentos de dados em tempo real, proporcionando a tomada de decisão estratégica mais rápida.</p>
                         <br/>
+                        <p class="text-white-50 mb-4">Tenho me qualificado em diversas áreas do desenvolvimento, principalmente em tecnologias de Front-End, como frameworks JavaScript/TypeScript (Vue JS, React).</p>
+                        <br/>
+                        <p class="text-white-50 mb-4">Outras cursos que conclui e/ou estou cursando em áreas do desenvolvimento: linguagem de programação (Python e PHP), banco Firebase e MongoDb, desenvolvimento de jogos (Unity com C#) , mobile Xamarim e Flutter, React Native.</p>
+                        <br/>
+                        <p class="text-white-50 mb-4">Também trabalhei em meados dos anos 2000 com hardware na área de manutenção de computadores, confecção e configuração de pequenas redes de computadores.</p>
+                        <br/>
+                        <p class="text-white-50 mb-4">Hoje tenho o prazer de trabalhar numa área que também é um dos meus hobbies.</p>
+                        <p class="text-white-50 mb-4">Meu conhecimento em inglês é básico para intermediário.</p>
+                        
                         <!--
                         <br/>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Tecnologias</a>
