--- a/index.html
+++ b/index.html
@@ -63,21 +63,12 @@
                         <br/>
                         <p class="text-white-50 mb-4">Durante minha experiência profissional, utilizei tecnologias com Asp.Net Webforms C# / Asp.Net MVC C# / Asp.Net Core C# / .Net 5 C# / JQuery / Bootstrap / Angular / JavaScript / TypeScript, utilizando diversos bancos de dados (MS Sqlserver / MySql / Oracle / Postgress), criando webservices/API e/ou RabbitMQ para integração e desenvolvendo melhorias as aplicações, adicionando, complementando ou substituindo funcionalidades.</p>
                         <br/>
-                        <p class="text-white-50 mb-4">Desenvolvi aplicações mobile (Java) que substituía a importação de dados via Excel, dando agilidade, rapidez e lançamentos de dados em tempo real, proporcionando a tomada de decisão estratégica mais rápida.</p>
+                        <p class="text-white-50 mb-4">Desenvolvi aplicações mobile (Java M.E.) que substituía a importação de dados via Excel, dando agilidade, rapidez e lançamentos de dados em tempo real, proporcionando a tomada de decisão estratégica mais rápida.</p>
                         <br/>
-                        <p class="text-white-50 mb-4">Tenho me qualificado em diversas áreas do desenvolvimento, principalmente em tecnologias de Front-End, como frameworks JavaScript/TypeScript (Vue JS, React).</p>
+                        <p class="text-white-50 mb-4">Tenho me qualificado em diversas áreas do desenvolvimento, principalmente em tecnologias de Front-End, como frameworks JavaScript/TypeScript (Vue JS, React JS).</p>
                         <br/>
                         <p class="text-white-50 mb-4">Outras cursos que conclui e/ou estou cursando em áreas do desenvolvimento: linguagem de programação (Python e PHP), banco Firebase e MongoDb, desenvolvimento de jogos (Unity com C#) , mobile Xamarim e Flutter, React Native.</p>
-                        <br/>
-                        <p class="text-white-50 mb-4">Também trabalhei em meados dos anos 2000 com hardware na área de manutenção de computadores, confecção e configuração de pequenas redes de computadores.</p>
-                        <br/>
-                        <p class="text-white-50 mb-4">Hoje tenho o prazer de trabalhar numa área que também é um dos meus hobbies.</p>
-                        <p class="text-white-50 mb-4">Meu conhecimento em inglês é básico para intermediário.</p>
                         
-                        <!--
-                        <br/>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Tecnologias</a>
-                        -->
                     </div>
                 </div>
             </div>
@@ -92,7 +83,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Web</h3>
-                            <p class="text-muted mb-0">C# AspNet, C# AspNet Core,Bootstrap, javaScript, TypeScript, Angular</p>
+                            <p class="text-muted mb-0">C# AspNet, C# AspNet Core, Bootstrap, javaScript, TypeScript, Angular</p>
                             
                         </div>
                     </div>
@@ -128,20 +119,16 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Entre em contato!</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Pronto para iniciar seu projeto? Ligue ou envie-nos um e-mail e entraremos em contato com você o mais breve possível!</p>
+                        <p class="text-muted mb-5">Pronto para iniciar seu projeto? <br> Envie um e-mail e entraremos em contato com você o mais breve possível!</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+55 (35) 9.2001-4611</div>
-                    </div>
-                    <div class="col-lg-4 mr-auto text-center">
+                <div class="row">                    
+                    <div class="col-lg-6 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                         <a class="d-block" href="mailto:vladimirca2000@gmail.com">vladimirca2000@gmail.com</a>
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
+                    <div class="col-lg-6 mr-auto text-center">
                         <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                         <div>Bom Sucesso - MG</div>
