--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6787618824527416" crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FRCF9XZWL"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-338V9E6MS0"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
         
-          gtag('config', 'G-3FRCF9XZWL');
+          gtag('config', 'G-338V9E6MS0');
         </script>
     </head>
     <body id="page-top">
